Merge updates from classlib trunk@824035 since r822279.
git-svn-id: https://svn.apache.org/repos/asf/harmony/enhanced/classlib/branches/java6@824184 13f79535-47bb-0310-9956-ffa450edef68